test/classes/errors/nilability-return-yield/return-borrowed.good
return-borrowed.chpl:3: In function 'P':
return-borrowed.chpl:3: error: cannot initialize return value of type 'borrowed C' from a 'borrowed C?'
